--- a/environment.yml
+++ b/environment.yml
@@ -3,11 +3,8 @@ channels:
   - conda-forge
 dependencies:
   - numpy
-  - psutil
-  - toolz
   - matplotlib
-  - dill
   - pandas
-  - partd
-  - bokeh
-  - dask
+  - sympy
+  - scipy
+  - seaborn
